--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>buddy</name>
-	<description>Startup web skeleton project</description>
+	<description>Buddy skeleton</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -39,6 +39,19 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+		   <groupId>org.webjars</groupId>
+		   <artifactId>bootstrap</artifactId>
+            <version>3.3.6</version>
+	    </dependency>
+
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>jquery</artifactId>
+            <version>2.1.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
